--- a/.github/workflows/frappe-ci.yml
+++ b/.github/workflows/frappe-ci.yml
@@ -24,4 +24,6 @@ jobs:
       node-version: 24
       # Optional: Override Redis version (default is 6.0)
       redis-version: '6.0'
+      # Install Payments App (Required for PayFast settings)
+      install-payments: true
     secrets: inherit
