--- a/rcore/pay/doctype/payfast_settings/payfast_settings.json
+++ b/rcore/pay/doctype/payfast_settings/payfast_settings.json
@@ -54,7 +54,7 @@
     "links": [],
     "modified": "2024-07-01 12:00:00.000000",
     "modified_by": "Administrator",
-    "module": "Pay",
+    "module": "pay",
     "name": "PayFast Settings",
     "owner": "Administrator",
     "permissions": [
