--- a/rcore/pay/doctype/paystack_settings/paystack_settings.json
+++ b/rcore/pay/doctype/paystack_settings/paystack_settings.json
@@ -29,7 +29,7 @@
     "issingle": 1,
     "modified": "2025-10-03 02:17:00.000000",
     "modified_by": "Administrator",
-    "module": "Pay",
+    "module": "pay",
     "name": "Paystack Settings",
     "owner": "Administrator",
     "permissions": [
