--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
     permissions:
       contents: write
       issues: write
+      pull-requests: write
     uses: RokctAI/shared-workflows/.github/workflows/universal-pipeline.yml@main
     with:
       project_type: 'frappe'
@@ -61,3 +62,5 @@ jobs:
       db-type: ${{ inputs.db-type || 'postgres' }}
       version_format: ${{ inputs.version_format || '##.##.##' }}
     secrets: inherit
+
+
